--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 	<p><strong>Hola mundo Mi nombre es Jose David Martinez Salandia,tengo 19 años naci el 27 de abril del año 2003 y estoy aprediendo HTML en la clase de introducion a sistemas </strong></p>
 	<p>mi historial academico es: estudie en el quinder en la ecuela brigadas de amor cristiano ,en escuela estuve en la escuela juan calvino y en el colegio estuve en el colegio la esperanza en el cual me gradue el año 2020 en el año de la pandemia y actualmento estoy estudiando la carrera de ingenieria en sistemas en la Universidad Autonoma de Honduras en el CURLP en choluteca que estoy desde el año 2021 hasta ahora este es mi tercer año desde que estoy en la universidad </p>
 	<p>
-	 <h2 id="subcabezado"> en mi primer periodo de universidad lleve la clases de:</h2>
+
+	 <h2 > En mi primer periodo de universidad lleve la clases de:</h2>
 	 Historia de Honduras HH101<br>
 	 sociologia SC101<br>
 	 filosofia FF101<br>
 	 Matematica I MM110<br>
 	 Geometria y trigonometria MM111<br>
 	</p>
-	<p> <h2> en mi segundo periodo de universidad lleve la clases de:</h2>
+	<p> <h2 > En mi segundo periodo de universidad lleve la clases de:</h2>
 	 apreciacion musical y analisis RR158<br>
 	 Español general EG011<br>
 	 Ingles I IN101 <br>
@@ -27,28 +28,28 @@
 	 Introduccion a la computacion MM116<br>
 	</p>
 	<p> 
-		<h2> en mi Tercer periodo de universidad lleve la clases de:</h2>
+		<h2 > En mi Tercer periodo de universidad lleve la clases de:</h2>
 	 Ingles II IN102 <br>
 	 Calculo I MM201<br>
 	 Ingles I IN101 <br>
 	</p>
 	<p> 
-		<h2> en mi Cuarto periodo de universidad lleve la clases de:</h2>
+		<h2> En mi Cuarto periodo de universidad lleve la clases de:</h2>
 	 Vectores y Matrices MM202<br>
 	 Calculo II MM202<br>
 	 Dibujo I DQ101 <br>
 	 ingles III IN103<br>
 	</p>
-	<p> <h2> en mi Quinto periodo de universidad lleve la clases de:</h2>
+	<p> <h2> En mi Quinto periodo de universidad lleve la clases de:</h2>
 	 Fisica general I FS100<br>
 	 Estadistica I<br>
 	</p>
-	<p> <h2> en mi Sexto periodo de universidad lleve la clases de:</h2>
+	<p> <h2> En mi Sexto periodo de universidad lleve la clases de:</h2>
 	 Fisica General II FS200<br>
 	 Ecuaciones Diferenciales MM411 <br>
 	 Dibujo II DQ102 <br>
 	</p>
-	<p> <h2> en mi septimo  periodo de universidad el actual llevo la clases de:</h2>
+	<p> <h2> En mi septimo  periodo de universidad el actual llevo la clases de:</h2>
 	 Educacion Ambiental BI130<br>
 	 Introducion a la ingenieria en sistemas IS110<br>
 	</p>
@@ -57,14 +58,26 @@
 	 usar la computadora ,jugar videojuegos y jugar voleyball </font> </strong></p>
 	<div>
 		<h2>Mi serie favorita es Juego de Tronos</h2>
-		<img src="img/juegodetronos.jpg">
+		<img id="imagengmt" src="img/juegodetronos.jpg">
+	
 	</div> 
 	<div>
-		Esta es mi escena favorito en la serie (advertencia de spoiler en caso de haber visto la serie no vea la escena )
-		<a href="https://youtu.be/FwSzfbu5o6g">esta es mi escena o momento favorito en la serie</a>
+		
+		<h1><a href="https://youtu.be/FwSzfbu5o6g">Esta es mi escena favorito en la serie (advertencia de spoiler en caso de haber visto la serie no vea la escena )</a></h1>
+	
+		</div>
+	<div>
+		<h3>mi sagas de videjuego favorito es the legend of zelda y fire emblem</h3>
+		<img src="img/Link_(Hyrule_Historia).png" >
+		<img src="img/wp1844116.jpg" >
 	</div>
+	<div>
+		<h3>mi sagas de pelicula favorita es : STAR WARS</h3>
+		<img src="img/11794.png" >
+	</div>
+	
 	 
 
-<footer>gracias por leer</footer>
+<footer><h3> gracias por leer </h3></footer>
 </body>
 </html>
